doc/logfile.txt
Class documentation
<---- javadoc command: ---->
/private/var/folders/wj/m04wvjnj3m32dd9kg59r8hxr0000gn/T/AppTranslocation/E1151E58-732C-45D5-BDF6-2EBA62E00AC9/d/Greenfoot.app/Contents/JDK/Home/bin/javadoc
-author
-version
-nodeprecated
-protected
-Xdoclint:none
-noindex
-notree
-nohelp
-nonavbar
-source
11
-classpath
/private/var/folders/wj/m04wvjnj3m32dd9kg59r8hxr0000gn/T/AppTranslocation/E1151E58-732C-45D5-BDF6-2EBA62E00AC9/d/Greenfoot.app/Contents/Resources/Java/extensions/greenfoot.jar:/private/var/folders/wj/m04wvjnj3m32dd9kg59r8hxr0000gn/T/AppTranslocation/E1151E58-732C-45D5-BDF6-2EBA62E00AC9/d/Greenfoot.app/Contents/Resources/Java/bluejcore.jar:/private/var/folders/wj/m04wvjnj3m32dd9kg59r8hxr0000gn/T/AppTranslocation/E1151E58-732C-45D5-BDF6-2EBA62E00AC9/d/Greenfoot.app/Contents/Resources/Java/bluejeditor.jar:/private/var/folders/wj/m04wvjnj3m32dd9kg59r8hxr0000gn/T/AppTranslocation/E1151E58-732C-45D5-BDF6-2EBA62E00AC9/d/Greenfoot.app/Contents/Resources/Java/bluejext.jar:/private/var/folders/wj/m04wvjnj3m32dd9kg59r8hxr0000gn/T/AppTranslocation/E1151E58-732C-45D5-BDF6-2EBA62E00AC9/d/Greenfoot.app/Contents/Resources/Java/junit-4.11.jar:/private/var/folders/wj/m04wvjnj3m32dd9kg59r8hxr0000gn/T/AppTranslocation/E1151E58-732C-45D5-BDF6-2EBA62E00AC9/d/Greenfoot.app/Contents/Resources/Java/hamcrest-core-1.3.jar:/private/var/folders/wj/m04wvjnj3m32dd9kg59r8hxr0000gn/T/AppTranslocation/E1151E58-732C-45D5-BDF6-2EBA62E00AC9/d/Greenfoot.app/Contents/Resources/Java/bluej.jar:/private/var/folders/wj/m04wvjnj3m32dd9kg59r8hxr0000gn/T/AppTranslocation/E1151E58-732C-45D5-BDF6-2EBA62E00AC9/d/Greenfoot.app/Contents/Resources/Java/classgraph-4.2.6.jar:/private/var/folders/wj/m04wvjnj3m32dd9kg59r8hxr0000gn/T/AppTranslocation/E1151E58-732C-45D5-BDF6-2EBA62E00AC9/d/Greenfoot.app/Contents/Resources/Java/diffutils-1.2.1.jar:/private/var/folders/wj/m04wvjnj3m32dd9kg59r8hxr0000gn/T/AppTranslocation/E1151E58-732C-45D5-BDF6-2EBA62E00AC9/d/Greenfoot.app/Contents/Resources/Java/commons-logging-api-1.1.2.jar:/private/var/folders/wj/m04wvjnj3m32dd9kg59r8hxr0000gn/T/AppTranslocation/E1151E58-732C-45D5-BDF6-2EBA62E00AC9/d/Greenfoot.app/Contents/Resources/Java/jl1.0.1.jar:/private/var/folders/wj/m04wvjnj3m32dd9kg59r8hxr0000gn/T/AppTranslocation/E1151E58-732C-45D5-BDF6-2EBA62E00AC9/d/Greenfoot.app/Contents/Resources/Java/opencsv-2.3.jar:/private/var/folders/wj/m04wvjnj3m32dd9kg59r8hxr0000gn/T/AppTranslocation/E1151E58-732C-45D5-BDF6-2EBA62E00AC9/d/Greenfoot.app/Contents/Resources/Java/xom-1.2.9.jar:/private/var/folders/wj/m04wvjnj3m32dd9kg59r8hxr0000gn/T/AppTranslocation/E1151E58-732C-45D5-BDF6-2EBA62E00AC9/d/Greenfoot.app/Contents/Resources/Java/lang-stride.jar:/private/var/folders/wj/m04wvjnj3m32dd9kg59r8hxr0000gn/T/AppTranslocation/E1151E58-732C-45D5-BDF6-2EBA62E00AC9/d/Greenfoot.app/Contents/Resources/Java/nsmenufx-2.1.4.jar:/private/var/folders/wj/m04wvjnj3m32dd9kg59r8hxr0000gn/T/AppTranslocation/E1151E58-732C-45D5-BDF6-2EBA62E00AC9/d/Greenfoot.app/Contents/Resources/Java/richtextfx-fat-0.9.0.jar:/private/var/folders/wj/m04wvjnj3m32dd9kg59r8hxr0000gn/T/AppTranslocation/E1151E58-732C-45D5-BDF6-2EBA62E00AC9/d/Greenfoot.app/Contents/Resources/Java/guava-17.0.jar:/private/var/folders/wj/m04wvjnj3m32dd9kg59r8hxr0000gn/T/AppTranslocation/E1151E58-732C-45D5-BDF6-2EBA62E00AC9/d/Greenfoot.app/Contents/Resources/Java/httpclient-4.1.1.jar:/private/var/folders/wj/m04wvjnj3m32dd9kg59r8hxr0000gn/T/AppTranslocation/E1151E58-732C-45D5-BDF6-2EBA62E00AC9/d/Greenfoot.app/Contents/Resources/Java/httpcore-4.1.jar:/private/var/folders/wj/m04wvjnj3m32dd9kg59r8hxr0000gn/T/AppTranslocation/E1151E58-732C-45D5-BDF6-2EBA62E00AC9/d/Greenfoot.app/Contents/Resources/Java/httpmime-4.1.1.jar:/private/var/folders/wj/m04wvjnj3m32dd9kg59r8hxr0000gn/T/AppTranslocation/E1151E58-732C-45D5-BDF6-2EBA62E00AC9/d/Greenfoot.app/Contents/Resources/Java/javafx/lib/javafx.base.jar:/private/var/folders/wj/m04wvjnj3m32dd9kg59r8hxr0000gn/T/AppTranslocation/E1151E58-732C-45D5-BDF6-2EBA62E00AC9/d/Greenfoot.app/Contents/Resources/Java/javafx/lib/javafx.controls.jar:/private/var/folders/wj/m04wvjnj3m32dd9kg59r8hxr0000gn/T/AppTranslocation/E1151E58-732C-45D5-BDF6-2EBA62E00AC9/d/Greenfoot.app/Contents/Resources/Java/javafx/lib/javafx.fxml.jar:/private/var/folders/wj/m04wvjnj3m32dd9kg59r8hxr0000gn/T/AppTranslocation/E1151E58-732C-45D5-BDF6-2EBA62E00AC9/d/Greenfoot.app/Contents/Resources/Java/javafx/lib/javafx.graphics.jar:/private/var/folders/wj/m04wvjnj3m32dd9kg59r8hxr0000gn/T/AppTranslocation/E1151E58-732C-45D5-BDF6-2EBA62E00AC9/d/Greenfoot.app/Contents/Resources/Java/javafx/lib/javafx.media.jar:/private/var/folders/wj/m04wvjnj3m32dd9kg59r8hxr0000gn/T/AppTranslocation/E1151E58-732C-45D5-BDF6-2EBA62E00AC9/d/Greenfoot.app/Contents/Resources/Java/javafx/lib/javafx.properties.jar:/private/var/folders/wj/m04wvjnj3m32dd9kg59r8hxr0000gn/T/AppTranslocation/E1151E58-732C-45D5-BDF6-2EBA62E00AC9/d/Greenfoot.app/Contents/Resources/Java/javafx/lib/javafx.swing.jar:/private/var/folders/wj/m04wvjnj3m32dd9kg59r8hxr0000gn/T/AppTranslocation/E1151E58-732C-45D5-BDF6-2EBA62E00AC9/d/Greenfoot.app/Contents/Resources/Java/javafx/lib/javafx.web.jar:/Users/claudioperez/Downloads/HangmanFun
-d
/Users/claudioperez/Downloads/HangmanFun/doc
-encoding
UTF-8
-charset
UTF-8
/Users/claudioperez/Downloads/HangmanFun/Titlescreen.java
<---- end of javadoc command ---->
Loading source file /Users/claudioperez/Downloads/HangmanFun/Titlescreen.java...
/Users/claudioperez/Downloads/HangmanFun/Titlescreen.java:28: error: illegal start of expression
    }
    ^
1 error
